# babel

./: CHANGELOG.md  README.md  pyproject.toml  references.bib
diagrams/: inflexion-six-mappings.mmd  lineage-timeline.mmd
examples/: alphuck.yaml  baguafuck.yaml  befunge.yaml  brainfuck-chespirito.yaml  brainfuck-la-wea.yaml  brainfuck-mierda.yaml  brainfuck-rioplatense.yaml  brainfuck-vanilla.yaml  false.yaml  german.yaml  minimal-stack.yaml  ook.yaml  pikalang.yaml  spoon.yaml  subleq.yaml  wordfuck.yaml
plans/: 00-README.md  01-motivation.md  02-inspiration.md  03-position.md  04-whitepaper-babel.md  06-objections.md  07-whitepaper-llm-oriented-pl.md  08-witness-across-families.md
publications/: 00-listening-to-spanish.md  01-what-technical-vocabulary-refuses-to-carry.md  02-i-thought-i-was-the-first.md  03-two-be-verbs-for-two-kinds-of-equals.md  04-three-stances-toward-a-statement.md  05-one-verb-two-computations.md  06-when-the-verb-carries-its-own-arguments.md  07-a-cafecito-is-not-just-a-small-coffee.md  08-the-article-already-knows.md
research-notes/: category3-internal-artifact-mapping-2026-05-18.md  grok-critic-pass-2026-05-19.md  interpreter-candidates-2026-05-17.md  lit-pass-2026-05-17.md  multi-ai-consensus-2026-05-19.md
tests/: test_alphuck.py  test_baguafuck.py  test_chespirito.py  test_dispatcher_oisc.py  test_false.py  test_fungeoid_interpreter.py  test_german.py  test_instruction_arity.py  test_interpreter.py  test_la_wea.py  test_loader.py  test_mierda.py  test_oisc_interpreter.py  test_ook.py  test_pikalang.py  test_spec.py  test_spoon.py  (+4 more)
(+10 files in other folders)
