[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babel-runtime"
version = "0.8.0"
description = "Babel: a parameter-driven generator for esoteric programming languages."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ramon Rodriguez", email = "ramon@roderickc.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
babel = "babel.__main__:main"

[project.urls]
Homepage = "https://www.roderickc.com/babel"
Repository = "https://github.com/Roderick-Consulting-Inc/babel"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter; long URLs in docstrings are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
